--- a/css/main.less
+++ b/css/main.less
@@ -11,7 +11,7 @@ Examples:
 .rounded(5px);                              
 .border-radius(5px, 0, 0, 5px);             
 .opacity(0.8);                              
-.transition-duration(0.2s);                 
+.transition-duration(0.2s);               f  
 .rotation(15deg);                           
 .scale(2);                                  
 .transition(2s, ease-out);                  
@@ -354,6 +354,13 @@ footer{
         &.large{
             max-width:50%;
         }
+    }
+
+    figure.equation{
+        float:none !important;
+        margin: 0 auto !important;
+
+        border:0 !important;
     }
 
     @media @smartphones{
