--- a/css/main.less
+++ b/css/main.less
@@ -359,8 +359,15 @@ footer{
     figure.equation{
         float:none !important;
         margin: 0 auto !important;
+        max-width: inherit !important;
 
         border:0 !important;
+        text-align:center;
+
+        img{
+
+            zoom: 40%;
+        }
     }
 
     @media @smartphones{
